# squad

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  OKRs.md  README.md  bootstrap.sh  default.nix  docker-compose.yml  lerna.json  package-lock.json  package.json
.github/workflows/: ci.yml  container-web-app.yml  main.yml
app_spec/: index.js  install_and_run.sh  package-lock.json  package.json
app_spec/roshambo-web/: package-lock.json  package.json
cli/: launchTest.js  package-lock.json  package.json  test.js
curation/: .env  Dockerfile  curation-config.json  package-lock.json  package.json  truffle.js
curation/api/: EthPolynomialCurvedToken.json  index.js  package-lock.json  package.json
curation/contracts/: AutoBond.sol
curation/migrations/: 1_initial_migration.js  2_deploy_factory.js
curation/test/: AutoBond.js  CreateBondingCurve-test.js
curation/ui/: BondingCurveFactory.json  index.js  package-lock.json  package.json
docs/handbook/: README.md
docs/papers/: squad-paper.md  squad-protocol.md
holochain-tests/: index.js  run_game.js
metastore/: .dockerignore  Dockerfile  app.json
metastore/zomes/definitions/code/: .hcbuild  Cargo.toml
metastore/zomes/definitions/code/src/: definitions.rs  lib.rs
sdk/js/: README.md  curation-config.json  index.js  package-lock.json  package.json
test/: contribute_get.js  game_runner.js  index.js  package-lock.json  package.json  run_game.js  test_linux_bash_game_runner.js  ui.js
tests/: test.js
ui/: package-lock.json  package.json
ui/src/: .#index.js  (+6 more)
website/: config.toml
(+96 files in other folders)
