[package]
  name = "definitions"
  version = "0.0.1"
  authors = ["Jesse B. Miller <jesse@jessebmiller.com>", "Ezra Weller <ezra.weller@gmail.com>"]
  edition = "2018"

[dependencies]
  serde = "1.0"
  serde_json = "1.0"
  serde_derive = "1.0"
  hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.22-alpha1" }
  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.22-alpha1" }
  holochain_json_derive = { version = "0.0.1-alpha2" }

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
